--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿Flask==2.2.5
+Flask==2.2.5
 Flask-Cors==3.0.10
 gunicorn==20.1.0
 Jinja2==3.1.2
@@ -6,12 +6,12 @@ joblib==1.2.0
 matplotlib==3.5.2
 matplotlib-inline==0.1.6
 notebook==6.5.4
-numpy==1.23.0
+numpy==1.21.5
 openpyxl==3.1.2
 pandas==1.3.4
 pickleshare==0.7.5
 requests==2.31.0
-scikit-learn==1.2.0
+scikit-learn==1.0.1
 scipy==1.7.2
 seaborn==0.12.2
 uri-template==1.2.0
