--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ joblib==1.2.0
 matplotlib==3.5.2
 matplotlib-inline==0.1.6
 notebook==6.5.4
-numpy==1.21.5
+numpy
 openpyxl==3.1.2
 pandas==1.3.4
 pickleshare==0.7.5
@@ -18,4 +18,3 @@ uri-template==1.2.0
 urllib3==2.0.2
 virtualenv==20.23.0
 xgboost==1.6.1
-gunicorn
